<resources>
    <string name="app_name">Library</string>

    <!--app下载更新-->
    <string name="update_title" translatable="false">应用更新</string>
    <string name="update_version" translatable="false">最新版本：%1$s</string>
    <string name="update_size" translatable="false">新版本大小：%1$s</string>
    <string name="update_content_lb" translatable="false">更新内容</string>
    <string name="update_content" translatable="false">1.用户体验优化\n2.部分问题修复</string>
    <string name="update_force_tip" translatable="false">你需要更新应用才能继续使用</string>
    <string name="down_loading" translatable="false">正在努力下载中…</string>
    <string name="down_version" translatable="false">版本号：%1$s</string>
    <string name="down_failed" translatable="false">下载失败，是否重试？</string>
    <string name="down_failed_tip" translatable="false">温馨提示</string>
    <string name="down_ok" translatable="false">确 认</string>
    <string name="down_cancel" translatable="false">取 消</string>
    <string name="down_browser" translatable="false">浏览器下载</string>
    <string name="update_text" translatable="false">立即更新</string>
    <string name="update_later" translatable="false">稍后更新</string>
    <string name="update_permission" translatable="false">请授权访问存储空间权限，更新后更流畅哦</string>
    <string name="default_update_content" translatable="false">1.用户体验优化\n2.性能优化\n3.bug修复</string>
</resources>
