<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"

        android:text="@string/update_title"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvForceUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/update_force_tip"
        android:textColor="@color/updateColor"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/update_version"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvFileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/update_size"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvContentTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:text="@string/update_content_lb"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.2"
        android:maxHeight="150dp"
        android:scrollbarSize="1dp"
        android:scrollbars="vertical"
        android:text=""
        android:textSize="16sp"
        tools:text="@string/update_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateLater"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_later"
            android:textColor="@color/updateColor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnUpdateNow"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_text"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>