<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/down_failed_tip"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/down_version"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/download_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16sp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/down_failed"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBrowser"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_browser"
            android:textColor="@color/updateColor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_cancel"
            android:textColor="@color/color_blue"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnOk"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_ok"
            android:textColor="@color/color_blue"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>